--- a/graphql-client/package.json
+++ b/graphql-client/package.json
@@ -18,6 +18,7 @@
         "@babel/preset-env": "^7.21.5",
         "@babel/preset-typescript": "^7.21.5",
         "@pact-foundation/pact": "^11.0.2",
+        "@pact-foundation/pact-node": "10.16.1",
         "@types/jest": "^29.5.1",
         "@types/node": "^20.1.2",
         "jest": "^29.5.0",
